--- a/index.css
+++ b/index.css
@@ -7,8 +7,10 @@
 :root {
     --lin-grad-1: rgba(0, 0, 0, 0.5);
     --lin-grad-2: rgba(1, 0, 0, 0.8);
-    --bg-image:url(./imagenes/IMG-20231129-WA0009.jpg);
+    --bg-image:url(./imagenes/toyota-avanza.jpg);
     --color_Theme-1:#FDB813;
+    --Yellow-bright:#FCEF14;
+    --Yellow-medium-bright:#FCD314;
     --color_Theme-2:#2A2A2A;
     --h1_font-Size:3.4rem;
     --h2_font-Size:2.8rem;
@@ -23,7 +25,7 @@
     --Header_Font_size:1.8rem;
     --Header_Vertical_Padding:0.8rem;
     --font-family1: 'Caveat', cursive;
-    --font-family2: 'Hedvig Letters Serif', serif;
+    --font-family2: 'Zilla Slab', serif;
     --font-family3: 'Lora', serif;
 
 
@@ -35,7 +37,9 @@ html {
 
 body {
     font-family: var(--font-family2);
+    font-size: 1.6rem;
 }
+
 img {
     width: 100%;
     display: block;
@@ -52,11 +56,12 @@ a:visited {
 section{
     padding: 2rem 0;
 }
+h1,
 h2,
-h3, 
-.navbar {
-    font-family: var(--font-family3);
+h3 {
+        font-family: var(--font-family3);
 }
+
 /* Header */
 header {
     position: fixed;
@@ -86,17 +91,20 @@ header {
     font-weight: bold;
     font-family: var(--font-family1);
     font-size: var(--h2_font-Size);
+    user-select: none;
+
 }
 /* Navbar */
 .navbar {
     width: 100%;
+    font-family: var(--font-family2);
 }
-
 .navbar > #navigation {
     display: flex;
     width: 100%;
     justify-content: space-around;
     align-items: center;
+    font-weight: bold;
 }
 #navigation > li {
     padding: 5px 12px;
@@ -108,7 +116,10 @@ header {
 }
 #navigation > li:hover {
     background-color: var(--color_Theme-1);
+    color: var(--color_Theme-2);
 }
+
+
 #navigation > li:hover img {
     filter: invert(1);
     transition: filter 0.2s ease;
@@ -135,7 +146,7 @@ header {
 .transporte-btn {
     background-color: transparent;
     border: none;
-    color: #fff;
+    color: inherit;
     display: flex;
     align-items: center;
     gap: 1rem;
@@ -144,9 +155,16 @@ header {
     font-family: inherit;
     border: none;
     font-size: inherit;
+    font-weight: inherit;
+
 }
+
 #tipo-transportes > li {
     margin: 0.4rem 0;
+}
+#tipo-transportes a {
+    width: 100%;
+    display: block;
     padding: 0.4rem 0.4rem;
 }
 /* Subnavigation list items */
@@ -182,7 +200,7 @@ header {
     width: 100%;
     min-height: 70vh;
     position: relative;
-    padding: calc(var(--Header_Vertical_Padding) * 2 + var(--Header_Font_size) + var(--h1_font-Size))  ;
+    padding: calc(var(--Header_Vertical_Padding) * 1.5 + var(--Header_Font_size) + var(--h1_font-Size));
 }
 .main-content {
     width: 100%;
@@ -221,22 +239,23 @@ header {
 .main-content h1 {
     word-spacing: 3px;
     letter-spacing: 2px;
+    color: var(--Yellow-bright);
+    
 }
 .main-content span {
     font-size:var(--main_content-small-fontSize) ;
     color: white;
     margin-bottom: 2.3rem;
-    word-spacing: 3px;
-    letter-spacing: 1px;
+    word-spacing: 2px;
 }
 .text-wrapper{
     display: grid;
 }
 .main-content a {
-    padding: 1rem .8rem;
+    padding: .8rem 1rem;
     font-size: var(--main_content-button-fontSize);
-    background-color: var(--color_Theme-1);
-    color: var(--color_Theme-2);
+    background-color: var(--Yellow-medium-bright);
+    color: black;
     border-radius: 1.5rem;
     cursor: pointer;
     width: fit-content;
@@ -269,12 +288,14 @@ h1 {
     gap: 1.4rem;
     bottom: 2rem;
     right: 4rem;
+    
 }
 .logos-wrapper img {
     max-height: 6rem;
     aspect-ratio: 1;
     width: 6rem;
     filter: brightness(.8);
+    user-select: none;
 } 
 
 @media (prefers-reduced-motion: no-preference) {
@@ -289,7 +310,9 @@ h1 {
     background: rgb(207, 208, 205);
         background: linear-gradient(135deg, rgba(207, 208, 205, 1) 23%, rgba(255, 255, 255, 1) 92%);
 }
-#local h2 {
+#local img {
+    border-radius: 25rem;
+    max-width: 600px;
 }
 .grid-wrapper {
     display: grid;
@@ -306,34 +329,23 @@ h1 {
     word-spacing: 2px;
 }
 
-#big-grid-img {
-    width: 85%;
 
-    max-width: 600px;
-    border-radius: 100vw;
-}
 /* ======Skills====== */
 #skills {
     background: rgb(207, 208, 205);
     background: linear-gradient(45deg, rgba(207, 208, 205, 1) 23%, rgba(255, 255, 255, 1) 92%);
-}
-#skills > h2 {
 }
 h2 {
     margin-bottom: 2rem;
     font-size: var(--h2_font-Size);
 }
 /* Service-content-wrapper */
-
-
-
 .service-content-wrapper {
     display: flex;
     gap: 2.9rem;
     max-width: 95%;
     margin: 0 auto;
 }
-
 .service {
     display: flex;
     flex-direction: column;
@@ -354,25 +366,27 @@ h2 {
     font-size: var(--h3_font-Size);
     margin-bottom: auto;
 }
-
 .service:nth-child(even) {
     background-color: var(--color_Theme-1);
     color: #2A2A2A;
 }
-
 .service:nth-child(even)::after {
     background-color: #2A2A2A;
 }
-
-.service>i {
+.service > i,
+.service > strong {
     font-size: var(--service_Icons-size);
+    margin-bottom: auto;
 }
-
-.service>p {
+.service > strong {
+    border: 2px solid black;
+    padding: .6rem;
+    background-color: white;
+}
+.service> p {
     font-size: var(--p_big-font-Size);
     text-align: center;
 }
-
 .service::after {
     content: '';
     position: absolute;
@@ -383,20 +397,128 @@ h2 {
     transition: transform 500ms ease;
     transform: translateX(-100%);
 }
-
 .service:hover {
     transform: scale(1.05);
 }
-
 .service:hover::after {
     transform: translateX(0);
 }
 /* Foraneo */
 #foraneo {
     background-color: var(--color_Theme-2);
+    background: linear-gradient(rgb(11, 11, 11) 65%, var(--color_Theme-2));
     color: white;
+    padding: 7vh 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+}
+#foraneo > p {
+    font-size: var(--main_content-small-fontSize);
+    text-align: center;
+}
+#foraneo-list figure {
+    position: relative;
+    flex: 1;
+}
+figure img {
+    width: 100%;
+    height: 100%;
+    aspect-ratio: 1;
+}
+#foraneo > * {
+    max-width: 90%;
+}
+#foraneo > h2 {
+    text-align: center;
+}
+/* Legend */
+#foraneo-list > li figcaption {
+    position: absolute;
+    background-color: rgb(0, 0, 0);
+    left: 0;
+    bottom: 0;
+    border-top-right-radius: .5rem;
+    border-top-left-radius: .5rem;
+    z-index: 10;
+    font-weight: bold;
+    font-size: 2rem;
+    display: flex;
+    justify-content: center;
+    gap: 0.3rem;
+    align-items: center;
+    width: 100%;
+    height: fit-content;
+    color: #fff;
+    padding: .4rem 2rem;
+}
+/* Location Icon */
+figcaption img {
+    width: fit-content !important;
+    height: fit-content !important;
 }
 
+
+/* SWIPER JS */
+
+.swiper {
+    width: 100%;
+    max-width: 90%;
+    height: 100%;
+}
+
+.swiper-slide {
+    text-align: center;
+    font-size: 18px;
+    background: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.swiper-slide img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    aspect-ratio: 1;
+    filter: brightness(.8);
+}
+.swiper-button-next,
+.swiper-button-prev {
+    color:rgba(255, 255, 255, 0.75) !important;
+}
+
+/* ======CONTACTO===== */
+#contacto {
+    background-color: white;
+    color: black;
+    display: grid;
+    place-items: center;
+
+}
+#contacto h2 {
+    text-align: center;
+}
+.driver{
+    font-size: var(--h2_font-Size);
+}
+.contact-whatsapp-link {
+    display: grid;
+    place-items: center;
+    text-align: center;
+}
+.contact-phone{
+    font-size: var(--h3_font-Size);
+    font-weight: bold;
+    font-family: var(--font-family3);
+}
+.whatsapp-logo {
+    max-width: calc(var(--h3_font-Size) * 2);
+    user-select: none;
+}
 /* Generic */
 .text-center {
     text-align: center;
@@ -410,6 +532,10 @@ h2 {
 }
 .flex {
     display: flex;
+}
+.italic {
+    font-style: italic;
+    margin-bottom: 2.5rem;
 }
 .justify-center {
     justify-content: center;
@@ -429,9 +555,9 @@ h2 {
             --h3_font-Size: 1.8rem;
             --p_big-font-Size: 1.4rem;
             --main_content-big-fontSize: 3.2rem;
-            --main_content-small-fontSize: 1.6rem;
+            --main_content-small-fontSize: 1.8rem;
             --service_Icons-size: 6rem;
-            --main_content-button-fontSize:1.5rem;
+            --main_content-button-fontSize:1.7rem;
         }
     .main-content h1 {
         text-align: start;
@@ -509,16 +635,22 @@ h2 {
         }
         .main {
             width: 100%;
-            padding: calc(var(--Header_Vertical_Padding) * 2 + var(--Header_Font_size) + var(--h1_font-Size)) calc(var(--Header_Vertical_Padding) * 2);
+            padding: calc(var(--Header_Vertical_Padding)  + var(--Header_Font_size) + var(--h1_font-Size)) calc(var(--Header_Vertical_Padding) * 1.5);
         }
         .main-content {
             margin-left: 0;
             flex-direction: column;
-            align-items: start;
+            align-items: center;
+            text-align: center;
             padding: 7vh 1rem;
         }
         .main-content h1 {
             text-align: center;
+        }
+        .main-content a {
+            width: 100%;
+            max-width: 250px;
+            margin: 0 auto;
         }
         .close-menu-btn {
             position: absolute;
@@ -556,7 +688,20 @@ h2 {
             pointer-events: all;
         }
 }
-
+@media only screen and (min-width: 769px) and (max-width: 1000px) {
+    .service-content-wrapper {
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+        }
+        .service:nth-child(2) {
+            grid-column: 1/3;
+            grid-row:2/3 ;
+        }
+    .service:nth-child(3) {
+        grid-column: 2/3;
+        grid-row: 1/2;
+    }
+}
 
 /* Extra large devices (large laptops and desktops, 1200px and up) */
 @media only screen and (min-width: 1200px) {
@@ -567,7 +712,7 @@ h2 {
         --p_big-font-Size: 2.2rem;
         --main_content-big-fontSize: 5rem;
         --main_content-small-fontSize: 3rem;
-        --main_content-button-fontSize: 3rem;
+        --main_content-button-fontSize: 2rem;
         --service_Icons-size: 10rem;
     }
     .main-content{
@@ -580,4 +725,7 @@ h2 {
         color: white;
         margin-bottom: 3.5rem;
     }
+        .main-content a {
+            padding: 1.4rem 1.8rem;
+        }
 }
