--- a/index.css
+++ b/index.css
@@ -505,42 +505,39 @@ figcaption img {
 }
 /* left side */
 .personal-info {
-    background-color: var(--color_Theme-2);
+    background-color: black;
     width: 100%;
     height: 100%;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
     color: white;
-    padding: 1rem 2rem;
+    padding: 6rem 6rem;
     text-align: center;
 }
-.contacto-contexto {
-    color: gold;
-}
+
 .promo-contexto {
+    color: var(--Yellow-medium-bright);
     font-size: var(--h3_font-Size);
 }
 #contacto h2 {
     text-align: center;
+    margin-bottom: 3rem;
 }
 
 .driver {
-    font-size: var(--h2_font-Size);
+    font-size: var(--h3_font-Size);
+    margin-bottom: 1.5rem;
 }
 .contact-name {
-    color: var(--Yellow-bright);
     font-weight: bold;
-
 }
-
 .contact-whatsapp-link {
     display: flex;
     gap: 1.5rem;
     align-items: center;
     justify-content: center;
-    color: green !important;
+    color: #25D366 !important;
+    margin-bottom: 2rem;
 }
 
 .contact-phone {
@@ -552,12 +549,13 @@ figcaption img {
 .whatsapp-logo {
     max-width: calc(var(--h3_font-Size) * 2);
     user-select: none;
+
 }
 /* Right side */
 .contacto-bg {
-    background: url('./imagenes/contacto.jpg') center/cover fixed no-repeat;
+    background: url('./imagenes/contacto.jpg') center/cover  no-repeat;
     height: 100%;
-    min-height: 70vh;
+    min-height: 50vh;
     width: 100%;
 }
 
@@ -729,18 +727,42 @@ figcaption img {
             transform: translate(0) !important;
             pointer-events: all;
         }
+        #contacto {
+            grid-template-columns:1fr;
+        }
+        /* Left contacto */
+        .personal-info {
+            grid-row: 2/3;
+        }
+        /* Right contacto */
+        .contacto-bg {
+            grid-row: 1/2;
+        }
 }
 @media only screen and (min-width: 769px) and (max-width: 1000px) {
     .service-content-wrapper {
             display: grid;
             grid-template-columns: 1fr 1fr;
         }
-        .service:nth-child(2) {
-            grid-column: 1/3;
-            grid-row:2/3 ;
-        }
+    .service:nth-child(2) {
+        grid-column: 1/3;
+        grid-row:2/3 ;
+    }
     .service:nth-child(3) {
         grid-column: 2/3;
+        grid-row: 1/2;
+    }
+    #contacto {
+        grid-template-columns: 1fr;
+    }
+
+    /* Left contacto */
+    .personal-info {
+        grid-row: 2/3;
+    }
+
+    /* Right contacto */
+    .contacto-bg {
         grid-row: 1/2;
     }
 }
